--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<a href="https://techreviews.onrender.com/" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Tech Reviews</span>
 								</a>
 
