--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="techreviews.onrender.com">Home</a></li>
-							<li><a href="techreviews.onrender.com">Tech Reviews</a></li>
+							<li><a href="https://techreviews.onrender.com">Home</a></li>
+							<li><a href="https://techreviews.onrender.com">Tech Reviews</a></li>
 							<li><a href="#">Tempus etiam</a></li>
 							<li><a href="#">Consequat dolor</a></li>
 							<li><a href="#">Serrure intelligente L2S</a></li>
