Serrure-intelligente-maroc-L2S-second-page-future.html

--- a/Serrure-intelligente-maroc-L2S-second-page-future.html
+++ b/Serrure-intelligente-maroc-L2S-second-page-future.html
@@ -58,7 +58,7 @@
 
 <p> Installer SmartLock L2S est un jeu d'enfant, en faisant un choix idéal pour les propriétaires cherchant des solutions de sécurité sans tracas. Cette serrure intelligente propose des fonctionnalités de sécurité avancées, y compris la reconnaissance biométrique et la surveillance en temps réel. Son intégration transparente avec les systèmes domotiques garantit une expérience de vie cohérente et interconnectée. L'interface conviviale ajoute une couche supplémentaire de commodité, permettant aux utilisateurs de gérer leurs paramètres de sécurité avec facilité.</p>
 
-<h2> <a href="https://tecnocity.ma/ezviz-l2s-smart-lock-maroc-serrure-intelligente-port/">Serrure Intelligente Maroc</a> : Une Tendance Croissante</h2>
+<h2> <a href="#">Serrure Intelligente Maroc</a> : Une Tendance Croissante</h2>
 
 <p> Le paysage marocain connaît une montée en flèche de l'adoption des serrures intelligentes, et pour de bonnes raisons. SmartLock L2S offre un niveau de sécurité inégalé, répondant aux besoins uniques des foyers marocains. La commodité et la tranquillité d'esprit qui accompagnent une serrure intelligente contribuent à sa popularité croissante dans la région.</p>
 
@@ -80,7 +80,7 @@
 
 <h3>Serrure Porte Intelligente Maroc : Renforcer la Sécurité à Domicile</h3>
 
-<p> Les serrures intelligentes, telles que <a href="https://tecnocity.ma/ezviz-l2s-smart-lock-maroc-serrure-intelligente-port/">Serrure Intelligente L2S</a>, jouent un rôle crucial dans le renforcement de la sécurité des portes dans les foyers marocains. Cette section explore les avantages de l'utilisation d'une serrure intelligente sur les portes et son intégration avec les systèmes de sécurité existants.</p>
+<p> Les serrures intelligentes, telles que <a href="#">Serrure Intelligente L2S</a>, jouent un rôle crucial dans le renforcement de la sécurité des portes dans les foyers marocains. Cette section explore les avantages de l'utilisation d'une serrure intelligente sur les portes et son intégration avec les systèmes de sécurité existants.</p>
 
 <h3>Expérience Utilisateur : Sans Couture et Intuitive</h3>
 
@@ -110,7 +110,7 @@
 
 <p> En conclusion, SmartLock L2S se positionne comme une solution révolutionnaire pour la sécurité à domicile au Maroc. Ses fonctionnalités avancées, son interface conviviale et son intégration transparente avec les systèmes domotiques en font un choix de premier ordre pour ceux qui recherchent une serrure intelligente fiable et innovante.</p>
                             
-<p><a href="https://tecnocity.ma/ezviz-l2s-smart-lock-maroc-serrure-intelligente-port/">Achetez le Serrure Intelligente L2S sur TecnoCity</a> </p>
+<p><a href="#">Achetez le Serrure Intelligente L2S sur TecnoCity</a> </p>
                             
 						</div>
 					</div>
